--- a/AngularJS/End/index.html
+++ b/AngularJS/End/index.html
@@ -1,4 +1,23 @@
 <!DOCTYPE html>
+<html lang="en" ng-app="customersApp">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Iterating Over Data</title>
+  </head>
+  <body>
+    <div ng-view></div>
+
+    <script src="scripts/angular.js"></script>
+    <script src="scripts/angular-route.js"></script>
+    <script src="./app/app.js"></script>
+    <script src="./app/controllers/customersControllerWithAs.js"></script>
+    <script src="./app/controllers/ordersController.js"></script>
+  </body>
+</html>
+
+<!-- <!DOCTYPE html>
 <html lang="en" ng-app>
   <head>
     <meta charset="UTF-8" />
@@ -14,25 +33,27 @@
 
     <table>
       <tr>
-        <th>Name</th>
-        <th>City</th>
-        <th>Order</th>
-        <th>Joined</th>
+        <th ng-click="sortBy='name';reverse=!reverse">Name</th>
+        <th ng-click="sortBy='city';reverse=!reverse">City</th>
+        <th ng-click="sortBy='orderTotal';reverse=!reverse">Order</th>
+        <th ng-click="sortBy='joined';reverse=!reverse">Joined</th>
       </tr>
-      <tr ng-repeat="cust in customers |filter: customerFilter | limitTo:3| orderBy:'name'">
+      <tr ng-repeat="cust in customers |filter: customerFilter | limitTo:3| orderBy:sortBy:reverse">
         <td>{{cust.name | uppercase}}</td>
         <td>{{cust.city | lowercase}}</td>
         <td>{{cust.orderTotal | currency}}</td>
-        <!-- <td>{{cust.orderTotal | currency:'y'}}</td> -->
+        <td>{{cust.orderTotal | currency:'y'}}</td>
         <td>{{cust.joined | date}}</td>
-        <!-- <td>{{cust.joined | date:'yyyy-MM-dd'}}</td> -->
-        <!-- <td>{{cust.joined | date:'longDate'}}</td> -->
-      </tr>
+        <td>{{cust.joined | date:'yyyy-MM-dd'}}</td>
+        <-- <td>{{cust.joined | date:'longDate'}}</td> -->
+<!-- </tr>
     </table>
+
 
     <script src="angular.js"></script>
   </body>
-</html>
+</html> -->
+-->
 
 <!-- <!DOCTYPE html>
 <html lang="en" ng-app>
@@ -60,7 +81,7 @@
       </tr>
     </table>
 
-    <script src="angular.js"></script>
+    <scrip src="angular.js"></scrip>
   </body>
 </html> -->
 
@@ -86,7 +107,7 @@
       </div>
     </div>
 
-    <script src="angular.js"></script>
+    <scrip src="angular.js"></scrip>
   </body>
 </html> -->
 
@@ -109,7 +130,7 @@
     Hide: <input type="checkbox" ng-model="isHidden" />
     <br />
     <button ng-click="name='Lavender'">Change Name</button>
-    <script src="angular.js"></script>
+    <scrip src="angular.js"></scrip>
   </body>
 </html> -->
 
