--- a/AngularJS/End/index.html
+++ b/AngularJS/End/index.html
@@ -14,6 +14,7 @@
     <script src="./app/app.js"></script>
     <script src="./app/controllers/customersControllerWithAs.js"></script>
     <script src="./app/controllers/ordersController.js"></script>
+    <script src="./app/services/customersFactory.js"></script>
   </body>
 </html>
 
