--- a/AngularJS/End/index.html
+++ b/AngularJS/End/index.html
@@ -15,6 +15,7 @@
     <script src="./app/controllers/customersControllerWithAs.js"></script>
     <script src="./app/controllers/ordersController.js"></script>
     <script src="./app/services/customersFactory.js"></script>
+    <script src="./app/services/values.js"></script>
   </body>
 </html>
 
