--- a/AngularJS/End/index.html
+++ b/AngularJS/End/index.html
@@ -4,9 +4,18 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Iterating Over Data</title>
+    <title>Customers/Orders App</title>
   </head>
   <body>
+    <header>
+      <nav>
+        <ul>
+          <li><a href="#/customers"></a></li>
+          <li><a href="#/orders"></a></li>
+        </ul>
+      </nav>
+    </header>
+
     <div ng-view></div>
 
     <script src="scripts/angular.js"></script>
