--- a/AngularJS/End/index.html
+++ b/AngularJS/End/index.html
@@ -4,12 +4,14 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link href="style.css" rel="stylesheet" type="text/css" />
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet" type="text/css" />
     <title>Customers/Orders App</title>
   </head>
   <body>
     <header>
-      <nav>
-        <ul>
+      <nav class="navbar navbar-default">
+        <ul class="nav navbar-nav">
           <li><a href="#/customers"></a></li>
           <li><a href="#/orders"></a></li>
         </ul>
