--- a/AngularJS/End/index.html
+++ b/AngularJS/End/index.html
@@ -22,9 +22,11 @@
 
     <script src="scripts/angular.js"></script>
     <script src="scripts/angular-route.js"></script>
+    <script src="scripts/angular-animate.js"></script>
     <script src="./app/app.js"></script>
     <script src="./app/controllers/customersController.js"></script>
     <script src="./app/controllers/ordersController.js"></script>
+    <script src="./app/controllers/allOrdersController.js"></script>
     <script src="./app/services/customersFactory.js"></script>
     <script src="./app/services/values.js"></script>
   </body>
