--- a/AngularJS/End/index.html
+++ b/AngularJS/End/index.html
@@ -19,7 +19,9 @@
       </nav>
     </header>
 
-    <div ng-view></div>
+    <main>
+      <div ng-view class="slide-animation"></div>
+    </main>
 
     <script src="scripts/angular.js"></script>
     <script src="scripts/angular-route.js"></script>
