--- a/AngularJS/AngularJS-mini-project/index.html
+++ b/AngularJS/AngularJS-mini-project/index.html
@@ -8,18 +8,18 @@
     <title>Shopping List App</title>
   </head>
   <body>
-    <div class="main">
+    <div class="main" ng-app="myList" ng-controller="myListController">
       <h1>Items List</h1>
       <div class="addItem">
-        <input class="addText" placeholder="Add an item" />
-        <button>Add to List</button>
+        <input ng-model="newItem" class="addText" placeholder="Add an item" />
+        <button ng-click="pushItem()">Add to List</button>
       </div>
       <ul>
-        <li>Shoe</li>
-        <li>Ball</li>
-        <li>Box</li>
-        <span>x</span>
+        <li ng-repeat="i in items">{{i}}<span>x</span></li>
       </ul>
     </div>
+
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.4.7/angular.min.js"></script>
+    <script src="app.js"></script>
   </body>
 </html>
