--- a/AngularJS/AngularJS-mini-project/index.html
+++ b/AngularJS/AngularJS-mini-project/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" ng-app="myList">
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
@@ -8,18 +8,11 @@
     <title>Shopping List App</title>
   </head>
   <body>
-    <div class="main" ng-app="myList" ng-controller="myListController">
-      <h1>Items List</h1>
-      <div class="addItem">
-        <input ng-model="newItem" class="addText" placeholder="Add an item" />
-        <button ng-click="pushItem()">Add to List</button>
-      </div>
-      <ul>
-        <li ng-repeat="i in items">{{i}}<span>x</span></li>
-      </ul>
-    </div>
+    <div ng-view></div>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.4.7/angular.min.js"></script>
     <script src="app.js"></script>
+    <script src="controllers/myListController.js"></script>
+    <script src="scripts/angular-route.js"></script>
   </body>
 </html>
