--- a/AngularJS/AngularJS-mini-project/index.html
+++ b/AngularJS/AngularJS-mini-project/index.html
@@ -13,6 +13,8 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.4.7/angular.min.js"></script>
     <script src="app.js"></script>
     <script src="controllers/myListController.js"></script>
+    <script src="controllers/savedController.js"></script>
+    <script src="services/myListFactory.js"></script>
     <script src="scripts/angular-route.js"></script>
   </body>
 </html>
